Added current build with DLLs

--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,9 @@
 *.userprefs
 
 # Build results
-[Dd]ebug/
+# [Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
+# [Rr]elease/
 [Rr]eleases/
 x64/
 x86/
@@ -306,3 +306,8 @@ $RECYCLE.BIN/
 *.sln
 *.vcxproj
 *.vcxproj.filters
+*.tlog
+*.idb
+*.pdb
+*.exp
+*.lib
